<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Health Project</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="title_activity_acmera">VoiceAgentActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_login">SecondLogoActivity</string>
    <string name="title_activity_voice">VoiceAgentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="next_page">Next Page</string>
    <string name="disconnect">Disconnect</string>
    <string name="login_progress_message">login_progress</string>
    <string name="loading">Loading…</string>
    <string name="Next">Next</string>
    <string name="Continue">Continue</string>
</resources>
